--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/layoutButtons"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+        <Button
+            android:id="@+id/btnLiverpool"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Liverpool"
+            />
+        <Button
+            android:id="@+id/btnManchester"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Manchester" />
+
+    </LinearLayout>
+
+
+    <ImageView
+        android:id="@+id/imgTeamShield"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-
-            <TextView
-                android:id="@+id/txtContent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sample_text"
-                />
-
-    </ScrollView>
-
-
+        app:layout_constraintTop_toBottomOf="@id/layoutButtons"
+        app:srcCompat="@drawable/manchester"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
