--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,48 @@
             android:text="Manchester" />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layoutRadio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/layoutButtons"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/rdbLiverpool"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Liverpool"
+                />
+            <RadioButton
+                android:id="@+id/rdbManchester"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Manchester"
+                />
+        </RadioGroup>
+        <Switch
+            android:id="@+id/switchTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textOff="Liverpool"
+            android:textOn="Manchester"
+            android:text="Liverpool"
+            />
+        <ListView
+            android:id="@+id/teamsList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/team_names"
+            />
+
+    </LinearLayout>
 
 
     <ImageView
@@ -35,7 +77,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutButtons"
+        app:layout_constraintTop_toBottomOf="@id/layoutRadio"
         app:srcCompat="@drawable/manchester"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
