--- a/app/src/main/res/layout/activity_info_equipo.xml
+++ b/app/src/main/res/layout/activity_info_equipo.xml
@@ -26,13 +26,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/teamName" />
+    <Button
+        android:id="@+id/btnTeamWebpage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Webpage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/teamOrigin"
+        />
     <ImageView
         android:id="@+id/teamFlag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/teamOrigin"
+        app:layout_constraintTop_toBottomOf="@id/btnTeamWebpage"
         android:src="@drawable/manchester"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
